# labs

./: .gitignore  CMakeLists.txt  README.md  bashscript.bash  readme.py
include/: DEFAULT_FUNCTIONS.h  DEFAULT_FUNCTIONS.h.gch  DEFAULT_LIBS_FUNC_CODES.h  DEFAULT_LIBS_FUNC_CODES.h.gch
lab1/task1/: README.md  functions.h  main.c  tempCodeRunnerFile.c  test.c
lab1/task10/: functions.h  itest  main.c  task10_functions.c  task10_functions.h  task10_main.c  task10_main.h  test.c
lab1/task2/: main.c  task2_functions.c  task2_functions.h  task2_main.c  task2_main.h
lab1/task2/include/: task2_functions.h
lab1/task2/src/: task2_functions.c
lab1/task3/: functions.h  main.c  task3_functions.c  task3_functions.h  task3_main.c  task3_main.h
lab1/task4/: functions.h  main.c  out_digits  out_funny  out_input.txt  out_itest  out_test.txt  task4_functions.c  task4_functions.h  task4_main.c  task4_main.h  test.txt
lab1/task4/test/: digits  funny  input.txt  itest  output  output.txt
lab1/task5/: functions.h  main.c  task5_functions.c  task5_functions.h  task5_main.c  task5_main.h
lab1/task6/: main.c  task6_functions.c  task6_functions.h  task6_main.c  task6_main.h
lab1/task6/include/: task6_functions.h
lab1/task6/src/: task6_functions.c
lab1/task7/: main.c  task7_functions.c  task7_functions.h  task7_main.c  task7_main.h
lab1/task7/include/: task7_functions.h
lab1/task7/src/: file1  file1.txt  file2  file2.txt  file3  file3.txt  task7_functions.c
lab1/task8/: main.c  output  task8_functions.c  task8_functions.h  task8_main.c  task8_main.h
lab1/task8/test/: input
lab1/task9/: main.c  task9_functions.c  task9_functions.h  task9_main.c  task9_main.h
lab1/task9/include/: task9_functions.h
lab1/task9/src/: task9_functions.c
lab2/task1/: task2_1_main.c
lab2/task1/include/: task2_1_functions.h
lab2/task1/src/: task2_1_functions.c
lab2/task10/: task2_10_main.c
lab2/task10/include/: task2_10_functions.h
lab2/task10/src/: task2_10_functions.c
lab2/task2/: task2_2_main.c
lab2/task2/include/: task2_2_functions.h
lab2/task2/src/: task2_2_functions.c
lab2/task3/: task2_3_main.c
lab2/task3/include/: task2_3_functions.h
lab2/task3/src/: file1.txt  file2.txt  task2_3_functions.c
lab2/task4/: task2_4_main.c
lab2/task4/include/: task2_4_functions.h
lab2/task4/src/: task2_4_functions.c
lab2/task5/: task2_5_main.c
lab2/task5/src/: task2_5_functions.c
lab2/task6/: task2_6_main.c
lab2/task6/include/: task2_6_functions.h
lab2/task6/src/: task2_6_functions.c
lab2/task7/: task2_7_main.c
lab2/task7/include/: task2_7_functions.h
lab2/task7/src/: task2_7_functions.c
lab2/task8/: task2_8_main.c
lab2/task8/include/: task2_8_functions.h
lab2/task8/src/: task2_8_functions.c
lab2/task9/: task2_9_main.c
lab2/task9/include/: task2_9_functions.h
lab2/task9/src/: task2_9_functions.c
lab3/task1/: task3_1_main.c
lab3/task1/include/: task3_1_functions.h
lab3/task1/src/: task3_1_functions.c
lab3/task10/: task3_10_main.c
lab3/task10/include/: task3_10_functions.h
lab3/task10/src/: input.txt  output.txt  task3_10_functions.c
lab3/task3/: task3_3_main.c
lab3/task3/include/: task3_3_functions.h  task3_3_functions.h.gch
lab3/task3/src/: input.txt  output.txt  task3_3_functions.c  test.txt
lab3/task4/: task3_4_main.c
lab3/task4/include/: task3_4_functions.h
lab3/task4/src/: task3_4_functions.c
lab3/task5/: task3_5_main.c
lab3/task5/include/: task3_5_functions.h
lab3/task5/src/: input.txt  logger.txt  task3_5_functions.c
src/: DEFAULT_FUNCTIONS.c  donut.c  kubik_6.c  rotating_donut
